--- a/ui.apps/src/main/content/jcr_root/apps/guides-components/clientlibs/clientlib-hfm/clientlib-base-manufacturing/css/topic/content.less
+++ b/ui.apps/src/main/content/jcr_root/apps/guides-components/clientlibs/clientlib-hfm/clientlib-base-manufacturing/css/topic/content.less
@@ -446,3 +446,12 @@ html#adobeguides-dark-contrast {
     }
   }
 }
+
+html#adobeguides-dark-contrast {
+  .manufacturing-guides-topic-page.dark{
+    .updated__section .updated,
+    .updated__section .published{
+      background-color: unset;
+    }
+  }
+}
