--- a/ui.apps/src/main/content/jcr_root/apps/guides-components/clientlibs/clientlib-hfm/clientlib-base-manufacturing/css/version-selector.less
+++ b/ui.apps/src/main/content/jcr_root/apps/guides-components/clientlibs/clientlib-hfm/clientlib-base-manufacturing/css/version-selector.less
@@ -121,8 +121,18 @@ html#adobeguides-dark-contrast {
   }
 }
 
+
+
 html.adobeguides-light-contrast {
   .manufacturing-guides-topic-page {
+    .version-selector .dropdown__item:hover {
+      color: var(--text-color);
+      a {
+        color: var(--text-color);
+      }
+    }
+  }
+  .manufacturing-guides-topic-page.dark {
     .version-selector .dropdown__item:hover {
       color: var(--text-color);
       a {
